Stub project done

--- a/Celebratorica/app/src/main/res/values/strings.xml
+++ b/Celebratorica/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
 	<string name="app_name">Celebratorica</string>
+	<string name="celebration_header">Celebrations</string>
 </resources>
