--- a/Celebratorica/app/src/main/res/values-sv/strings.xml
+++ b/Celebratorica/app/src/main/res/values-sv/strings.xml
@@ -15,4 +15,10 @@
 	<string name="category_add_header">Ny kategori</string>
 	<string name="category_add_success">Kategory skapad</string>
 	<string name="category_name">Kategorinamn</string>
+	<string name="category_remove_dialog_message">Om du raderar en kategori raderas även alla dess poster.\n\nVill du fortfarande radera kategorin?</string>
+	<string name="category_remove_dialog_title">Radera kategori?</string>
+	<string name="category_removed">Kategori borttagen</string>
+	<string name="category_restored">Kategori återställd</string>
+	<string name="item_removed">Post borttagen</string>
+	<string name="item_restored">Post återställd</string>
 </resources>
