--- a/Celebratorica/app/src/main/res/values/strings.xml
+++ b/Celebratorica/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
 	<string name="item_add_header">New Item</string>
 	<string name="item_add_discard">Discard new item?</string>
 	<string name="item_add_success">Item created</string>
+	<string name="item_restored">Item restored</string>
+	<string name="item_removed">Item removed</string>
 	<string name="item_edit_success" translatable="false">@string/edit_success</string>
 
 	<!-- Categories -->
@@ -14,7 +16,11 @@
 	<string name="category_add_header">New category</string>
 	<string name="category_add_discard">Discard new category?</string>
 	<string name="category_add_success">Category created</string>
+	<string name="category_restored">Category restored</string>
+	<string name="category_removed">Category removed</string>
 	<string name="category_edit_success" translatable="false">@string/edit_success</string>
+	<string name="category_remove_dialog_title">Remove category?</string>
+	<string name="category_remove_dialog_message">Removing a category will remove all its items.\n\nDo you still want to remove the category?</string>
 
 	<!-- Default Categories -->
 	<string name="category_default_celebrate_name">Celebrate</string>
