--- a/Celebratorica/app/src/main/res/values/strings.xml
+++ b/Celebratorica/app/src/main/res/values/strings.xml
@@ -40,4 +40,11 @@
 	<string name="showcase_add_another_category_title">Add another category</string>
 	<string name="showcase_add_another_category_message">What other categories can you add? How about all the thanks you\'ve received today?</string>
 	<string name="showcase_add_another_category_id" translatable="false">add_another_category</string>
+
+	<!-- Settings -->
+	<string name="setting_reminder_category_name">Daily reminder</string>
+	<string name="setting_reminder_key" translatable="false">reminder</string>
+	<string name="setting_reminder_title">Use daily reminders</string>
+	<string name="setting_reminder_time_1_key" translatable="false">reminder_time</string>
+	<string name="setting_reminder_time_title">Set reminder time</string>
 </resources>
