--- a/Celebratorica/app/src/main/res/values-sv/strings.xml
+++ b/Celebratorica/app/src/main/res/values-sv/strings.xml
@@ -27,4 +27,7 @@
 	<string name="showcase_add_first_category_message">Skapa en kategori för att skriva upp vad som är värt att fira eller vad du är tacksam för.</string>
 	<string name="showcase_add_first_category_title">Lägg till kategori</string>
 	<string name="item_edit_header">Redigera %s post</string>
+	<string name="setting_reminder_category_name">Daglig påminnelse</string>
+	<string name="setting_reminder_title">Använd påminnelser</string>
+	<string name="setting_reminder_time_title">Sätt påminnelsetid</string>
 </resources>
