--- a/Celebratorica/app/src/main/res/values/strings.xml
+++ b/Celebratorica/app/src/main/res/values/strings.xml
@@ -9,8 +9,12 @@
 	<string name="item_add_discard">Discard new item?</string>
 	<string name="item_add_success">Item created</string>
 	<string name="item_restored">Item restored</string>
-	<string name="item_removed">Item removed</string>
+	<string name="item_remove_success">Item removed</string>
 	<string name="item_edit_success" translatable="false">@string/edit_success</string>
+	<string name="item_get_failed">Failed to get items, try again later.</string>
+	<string name="item_add_failed">Failed to add item, try again later.</string>
+	<string name="item_edit_failed">Failed to edit item, try again later.</string>
+	<string name="item_remove_failed">Failed to remove item, try again later.</string>
 
 	<!-- Categories -->
 	<string name="category_name">Category name</string>
@@ -18,11 +22,16 @@
 	<string name="category_add_discard">Discard new category?</string>
 	<string name="category_add_success">Category created</string>
 	<string name="category_restored">Category restored</string>
-	<string name="category_removed">Category removed</string>
+	<string name="category_remove_success">Category removed</string>
 	<string name="category_edit_header">Edit categories</string>
 	<string name="category_edit_success" translatable="false">@string/edit_success</string>
+	<string name="category_get_failed">Failed to get categories, try again later.</string>
+	<string name="category_add_failed">Failed to add category, try again later.</string>
+	<string name="category_edit_failed">Failed to edit category, try again later.</string>
+	<string name="category_remove_failed">Failed to remove category, try again later.</string>
 	<string name="category_remove_dialog_title">Remove category?</string>
 	<string name="category_remove_dialog_message">Removing a category will remove all its items.\n\nDo you still want to remove the category?</string>
+
 
 	<!-- Default Categories -->
 	<string name="category_default_1_name">Wins</string>
@@ -58,14 +67,4 @@
 	<string name="setting_store_location_local_key" translatable="false">local</string>
 	<string name="setting_store_location_local_title">Phone</string>
 	<string name="setting_store_location_not_set_key" translatable="false">not_set</string>
-
-	<!-- Firestore Events -->
-	<string name="cloud_failed_get_category">Failed to get categories, try again later.</string>
-	<string name="cloud_failed_add_category">Failed to add category, try again later.</string>
-	<string name="cloud_failed_edit_category">Failed to edit category, try again later.</string>
-	<string name="cloud_failed_remove_category">Failed to remove category, try again later.</string>
-	<string name="cloud_failed_get_items">Failed to get items, try again later.</string>
-	<string name="cloud_failed_add_item">Failed to add item, try again later.</string>
-	<string name="cloud_failed_edit_item">Failed to edit item, try again later.</string>
-	<string name="cloud_failed_remove_item">Failed to remove item, try again later.</string>
 </resources>
